--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,11 @@
-body {
+<body> {
       background-color #ccc;
 font-family:sans-serif;
 }
 
-h1 {
+<h1> {
   font-size: 1.5rem;
 
-  article {
+  <article> {
   font-style: italic
 color: #666;}
